--- a/invoices/webapp/manifest.json
+++ b/invoices/webapp/manifest.json
@@ -99,7 +99,7 @@
                 "routerClass": "sap.m.routing.Router",
                 "viewType": "XML",
                 "async": true,
-                "viewPath": "Logaligroup.invoices.view",
+                "viewPath": "invoices.view",
                 "controlAggregation": "pages",
                 "controlId": "app",
                 "clearControlAggregation": false
@@ -108,18 +108,20 @@
                 {
                     "name": "RouteApp",
                     "pattern": ":?query:",
-                    "target": [
-                        "TargetApp"
-                    ]
+                    "target": [ "TargetOverview" ]
+                },
+                {
+                    "name": "Details",
+                    "pattern": "details/{invoicePath}",
+                    "target": [ "TargetDetails" ]                   
                 }
             ],
             "targets": {
-                "TargetApp": {
-                    "viewType": "XML",
-                    "transition": "slide",
-                    "clearControlAggregation": false,
-                    "viewId": "App",
-                    "viewName": "App"
+                "TargetOverview": {
+                    "viewName": "Overview"
+                },
+                "TargetDetails":{
+                    "viewName": "Details"
                 }
             }
         },
