--- a/employees/webapp/manifest.json
+++ b/employees/webapp/manifest.json
@@ -124,21 +124,21 @@
                 "TargetMenu": {
                     "viewType": "XML",
                     "transition": "slide",
-                    "clearControlAggregation": false,
+                    "clearControlAggregation": true,
                     "viewId": "Menu",
                     "viewName": "Menu"
                 },
                 "TargetCreateEmployee": {
                     "viewType": "XML",
                     "transition": "slide",
-                    "clearControlAggregation": false,
+                    "clearControlAggregation": true,
                     "viewId": "CreateEmployee",
                     "viewName": "CreateEmployee"
                 },
                 "TargetShowEmployee": {
                     "viewType": "XML",
                     "transition": "slide",
-                    "clearControlAggregation": false,
+                    "clearControlAggregation": true,
                     "viewId": "ShowEmployee",
                     "viewName": "ShowEmployee"
                 }                 
